--- a/src/app/app.html
+++ b/src/app/app.html
@@ -76,5 +76,10 @@
     }
   </ul>
 
+
+  <hr>
+
+  <h4>Custom pipe: somma tutti i numeri</h4>
+  {{ [324, 231, 2, 45, 25, 98] | sommaNumeri }}
 </div>
 <router-outlet />
